clang/test/CodeGen/RISCV/builtin-cpu-is-error.c
// NOTE: Assertions have been autogenerated by utils/update_cc_test_checks.py UTC_ARGS: --version 5
// RUN: not %clang_cc1 -triple riscv64-unknown-linux-gnu -emit-llvm %s -o - 2>&1 \
// RUN:   | FileCheck %s

// CHECK: error: invalid cpu name for builtin
int test_cpu_is_invalid_cpu() {
  return __builtin_cpu_is("generic-rv64");
}
